--- a/cbpp-welcome/debian/control
+++ b/cbpp-welcome/debian/control
@@ -2,7 +2,7 @@ Source: cbpp-welcome
 Section: misc
 Priority: extra
 Maintainer: Ben Young <computermouth@crunchbangplusplus.org>
-Build-Depends: debhelper (>= 9)
+Build-Depends: debhelper (>= 11)
 Standards-Version: 3.9.5
 Homepage: https://crunchbangplusplus.org
 
@@ -29,13 +29,13 @@ Description: CrunchBangplusplus printer support meta package
 
 Package: cbpp-meta-java
 Architecture: all
-Depends: ${misc:Depends}, openjdk-8-jre, icedtea-8-plugin
+Depends: ${misc:Depends}, openjdk-11-jre
 Description: CrunchBangplusplus java meta package
  Installs various java packages.
 
 Package: cbpp-meta-libreoffice
 Architecture: all
-Depends: ${misc:Depends}, libreoffice, libreoffice-gtk
+Depends: ${misc:Depends}, libreoffice, libreoffice-gtk2
 Description: CrunchBangplusplus libreoffice meta package
  Installs libreoffice and associated gtk theme.
 
@@ -68,7 +68,7 @@ Architecture: all
 Depends:
  ${misc:Depends},
  apache2,
- mysql-server,
+ default-mysql-server,
  php,
  php-pear,
  php-gd,
@@ -76,7 +76,6 @@ Depends:
  php-imagick,
  php-curl,
  curl,
- phpmyadmin,
  rsync,
  cronolog
 Description: CrunchBangplusplus lamp meta package
